Ordenamiento de structura en html
Le di estructura e identifique las partes del html

--- a/index.html
+++ b/index.html
@@ -8,97 +8,110 @@
     <title>Hero Pet</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
+
+<body>
 <!-- Este es el header -->
+    <div>
+        <header class="header-wrapper">
+            <div class="header-logo">
+                <img class="logo" src="assets/Media/logobyn.png" alt="logo">
+            </div>
 
-<div>
-    <header class="header-wrapper">
-        <div class="header-logo">
-            <img class="logo" src="assets/Media/logobyn.png" alt="logo">
-        </div>
+            <div class="header-tittle">
+                <h1>Hero PET</h1>
+            </div>
 
-        <div class="header-tittle">
-            <h1>Hero PET</h1>
+            <div class="header-input">
+                <input type="text" placeholder="Buscar">
+            </div>
+        </header>
+<!--Jumbotron  -->
+    </div>
+        <div class="hero-wrapper">
+            <div class="hero">
+                <div class="hero-inner">
+                    <h1>El Lugar de tus mascotas</h1>
+                    <h2>PERROS GATOS CONEJOS</h2>
+                    <a class="btn">Guarda, Agenda y Consiente a tu mascosta</a>
+                </div>
+            </div>
         </div>
+<!-- Mas informacion o blog -->
+        <div class="header-second">
+            <h1>Nuestros Servicios</h1>
+        </div>
+        <div class="product-wrapper">
+            <div class="card">
+                <img class="imagen-full" src="assets/Media/perrito0.jpg" alt="Dogs">
+                <div class="container">
+                    <h4><b>Expediente</b></h4>
+                    <p class="text-justify"> Lleva el registro medico de tus mascotas a todas partes desde tu
+                        dispositivo
+                        movil,
+                        averigua como dando click aqui.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="imagen-full" src="assets/Media/perrito1.jpg" alt="Dogs">
+                <div class="container">
+                    <h4><b>Cuidado para tus mascotas</b></h4>
+                    <p class="text-justify"> Agenda cualquier servicio para tu mascosta, desde un baño y hasta la
+                        consulta
+                        del veterinario </p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="imagen-full" src="assets/Media/perrito2.jpg" alt="Dogs">
+                <div class="container">
+                    <h4><b>Adopcion</b></h4>
+                    <p class="text-justify">No compres adopta, en esta seccion podras conectar con las asociaciones y
+                        agendar una visita para conocer a tu peludo.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="imagen-full" src="assets/Media/perrito3.jpg" alt="Dogs">
+                <div class="container">
+                    <h4><b>HERO AlERT</b></h4>
+                    <p class="text-justify">Notifica a los usuarios de la plataforma que tu mascota esta extravida.</p>
+                </div>
+            </div>
+        </div>
+<!--Adicionales  -->
+        <div class="additional-wrapper">
+            <h1>Acerca de Nosotros</h1>
+            <p class="text-justify">
+                Aliquip occaecat enim reprehenderit exercitation id dolore et. In ex enim elit eu adipisicing anim
+                nostrud
+                occaecat nulla ullamco incididunt nostrud esse non. Id amet sint velit id reprehenderit veniam anim
+                officia
+                esse. Id nisi adipisicing ut reprehenderit enim aliqua reprehenderit sint deserunt laborum. Elit
+                consequat
+                duis nulla do anim. Non excepteur cillum eu pariatur velit exercitation culpa magna. Labore duis
+                adipisicing
+                amet veniam et enim nulla non.
 
-        <div class="header-input">
-            <input type="text" placeholder="Buscar">
+                Dolor do exercitation ex officia laborum ut quis sit. Eiusmod aute incididunt voluptate consequat minim
+                esse
+                aliquip commodo sit irure.
+            </p>
         </div>
-    </header>
-    <!-- Inicia el cuerpo de la pagina -->
-    <div class="hero-wrapper">
-        <div class="hero">
-            <div class="hero-inner">
-                <h1>El Lugar de tus mascotas</h1>
-                <h2>PERROS GATOS CONEJOS</h2>
-                <a class="btn">Guarda, Agenda y Consiente a tu mascosta</a>
+<!-- Footer -->
+        <footer>
+            <h1>Contactanos en nuestras redes sociales</h1>
+            <div class="social-wrapper">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/face1.png" alt="fb">
+                </a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/insta.png" alt="ig">
+                </a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/twitter.png" alt="tw">
+                </a>
             </div>
-        </div>
-    </div>
-    <div class="header-second">
-        <h1>Nuestros Servicios</h1>
-    </div>
-    <div class="product-wrapper">
-        <div class="card">
-            <img class="imagen-full" src="assets/Media/perrito0.jpg" alt="Dogs">
-            <div class="container">
-                <h4><b>Expediente</b></h4>
-                <p class="text-justify"> Lleva el registro medico de tus mascotas a todas partes desde tu dispositivo
-                    movil,
-                    averigua como dando click aqui.</p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="imagen-full" src="assets/Media/perrito1.jpg" alt="Dogs">
-            <div class="container">
-                <h4><b>Cuidado para tus mascotas</b></h4>
-                <p class="text-justify"> Agenda cualquier servicio para tu mascosta, desde un baño y hasta la consulta
-                    del veterinario </p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="imagen-full" src="assets/Media/perrito2.jpg" alt="Dogs">
-            <div class="container">
-                <h4><b>Adopcion</b></h4>
-                <p class="text-justify">No compres adopta, en esta seccion podras conectar con las asociaciones y
-                    agendar una visita para conocer a tu peludo.</p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="imagen-full" src="assets/Media/perrito3.jpg" alt="Dogs">
-            <div class="container">
-                <h4><b>HERO AlERT</b></h4>
-                <p class="text-justify">Notifica a los usuarios de la plataforma que tu mascota esta extravida.</p>
-            </div>
-        </div>
-    </div>
-    <div class="additional-wrapper">
-        <h1>Acerca de Nosotros</h1>
-        <p class="text-justify">
-            Aliquip occaecat enim reprehenderit exercitation id dolore et. In ex enim elit eu adipisicing anim nostrud
-            occaecat nulla ullamco incididunt nostrud esse non. Id amet sint velit id reprehenderit veniam anim officia
-            esse. Id nisi adipisicing ut reprehenderit enim aliqua reprehenderit sint deserunt laborum. Elit consequat
-            duis nulla do anim. Non excepteur cillum eu pariatur velit exercitation culpa magna. Labore duis adipisicing
-            amet veniam et enim nulla non.
-
-            Dolor do exercitation ex officia laborum ut quis sit. Eiusmod aute incididunt voluptate consequat minim esse
-            aliquip commodo sit irure.
-        </p>
-    </div>
-    <footer>
-        <h1>Contactanos en nuestras redes sociales</h1>
-        <div class="social-wrapper">
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/face1.png" alt="fb">
-            </a>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/insta.png" alt="ig">
-            </a>
-            <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/twitter.png" alt="tw">
-            </a>
-        </div>
-    </footer>
-    </body>
+        </footer>
+</body>
 
 </html>
-<!-- Este es un ejemplo para el commit -->
+<!-- Proyecto Creado por Angel Daniel (Kaniltazo) -->
