Ajuste 2 Complemento de pagina

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
 <!-- Footer -->
         <footer>
-            <h1>Contactanos en nuestras redes sociales</h1>
+            <p class="footer-p">Contactanos en Nuestras Redes Sociales</p>
             <div class="social-wrapper">
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
                     <img class="network-img" src="assets/Media/face1.png" alt="fb">
