--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>
 
             <div class="header-input">
+                <p>Iniciar Sesion<a href="Registro.html">registro</a>.</p>
                 <input type="text" placeholder="Buscar">
             </div>
         </header>
@@ -98,6 +99,10 @@
         </div>
 <!-- Footer -->
         <footer>
+            <form>
+                <label for="msg">Mensaje:</label>
+                <textarea id="msg" name="user_message"></textarea>
+            </form>
             <p class="footer-p">Contactanos en Nuestras Redes Sociales</p>
             <div class="social-wrapper">
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
