--- a/Registro.html
+++ b/Registro.html
@@ -12,7 +12,7 @@
 <div>
     <header class="header-wrapper">
         <div class="header-logo">
-            <img class="logo" src="assets/Media/logobyn.png" alt="logo">
+           <a href="index.html"> <img class="logo" src="assets/Media/logobyn.png" alt="logo"></a>
         </div>
 
         <div class="header-tittle">
@@ -51,5 +51,6 @@
                     </li>
                 </ul>
             </form>
+            <p><a href="index.html">Regresar al inicio</a>.</p>
           </div>
     </body>
