--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
         <header class="header-wrapper">
             <div class="header-logo">
-                <img class="logo" src="assets/Media/logobyn.png" alt="logo">
+                <a href="index.html"><img class="logo" src="assets/Media/logobyn.png" alt="logo"></a>
             </div>
 
             <div class="header-tittle">
