Cambios para contenido
Se agrega contenido

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
             </div>
 
             <div class="header-input">
-                <p>Iniciar Sesion<a href="Registro.html">registro</a>.</p>
-                <input type="text" placeholder="Buscar">
+                <p><a href="index.html">Login</a>.</p>
+                <p><a href="Registro.html"></a>Crear Cuenta.</p>
             </div>
         </header>
-<!--Jumbotron  -->
+<!--Jumbotron (Hero)  -->
     </div>
         <div class="hero-wrapper">
             <div class="hero">
                 <div class="hero-inner">
-                    <h1>El Lugar de tus mascotas</h1>
-                    <h2>PERROS GATOS CONEJOS</h2>
-                    <a class="btn">Guarda, Agenda y Consiente a tu mascosta</a>
+                    <h1>El Lugar de tu Perruno</h1>
+                    <h2></h2>
+                    <a class="btn">lleva toda la informacion de tu perruno siempre a la mano</a>
                 </div>
             </div>
         </div>
@@ -106,15 +106,20 @@
             <p class="footer-p">Contactanos en Nuestras Redes Sociales</p>
             <div class="social-wrapper">
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                    <img class="network-img" src="assets/Media/face1.png" alt="fb">
+                    <img class="network-img" src="assets/Media/Facebook.png" alt="fb">
                 </a>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                    <img class="network-img" src="assets/Media/insta.png" alt="ig">
+                    <img class="network-img" src="assets/Media/Instagram.png" alt="ig">
                 </a>
                 <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
                     <img class="network-img" src="assets/Media/twitter.png" alt="tw">
                 </a>
+                <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt">
+                </a>
             </div>
+
+            
         </footer>
 </body>
 
