Trabajando en el header
Trabajo directo en header

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
             <div class="header-tittle">
                 <h1>Hero PET</h1>
             </div>
-
+            <div class="header-registro">
+                <p><a href="Registro.html">Crear Cuenta</a></p>
+            </div>
             <div class="header-input">
-                <p><a href="index.html">Login</a>.</p>
-                <p><a href="Registro.html"></a>Crear Cuenta.</p>
+                <p><a href="index.html">Login</a></p>
             </div>
         </header>
 <!--Jumbotron (Hero)  -->
