--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 
 <body>
     <!-- Este es el header -->
-    <div>
+    <div class="grid-container">
         <header class="header-wrapper">
             <div class="header-logo">
                 <a href="index.html"><img class="logo" src="assets/Media/logobyn.png" alt="logo"></a>
             </div>
-
             <div class="header-tittle">
                 <h1>Hero PET</h1>
             </div>
@@ -25,12 +24,13 @@
             <div class="header-registro">
                 <p><a href="Registro.html">Crear Cuenta</a></p>
             </div>
+
             <div class="header-input">
                 <p><a href="index.html">Login</a></p>
             </div>
-        </header>
-        <!--Jumbotron (Hero)  -->
+    </header>
     </div>
+    <!--Jumbotron (Hero)  -->
     <div class="hero-wrapper">
         <div class="hero">
             <div class="hero-inner">
@@ -54,75 +54,76 @@
                     movil,
                     averigua como dando click aqui.</p>
             </div>
-        </div>
-        <div class="card">
-            <img class="imagen-full" src="assets/Media/perrito1.jpg" alt="Dogs">
-            <div class="container">
-                <h4><b>Cuidado para tus mascotas</b></h4>
-                <p class="text-justify"> Agenda cualquier servicio para tu mascosta, desde un baño y hasta la
-                    consulta
-                    del veterinario </p>
             </div>
-        </div>
-        <div class="card">
-            <img class="imagen-full" src="assets/Media/perrito2.jpg" alt="Dogs">
-            <div class="container">
-                <h4><b>Adopcion</b></h4>
-                <p class="text-justify">No compres adopta, en esta seccion podras conectar con las asociaciones y
-                    agendar una visita para conocer a tu peludo.</p>
+            <div class="card">
+                <img class="imagen-full" src="assets/Media/perrito1.jpg" alt="Dogs">
+                <div class="container">
+                    <h4><b>Cuidado para tus mascotas</b></h4>
+                    <p class="text-justify"> Agenda cualquier servicio para tu mascosta, desde un baño y hasta la
+                        consulta
+                        del veterinario </p>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <img class="imagen-full" src="assets/Media/perrito3.jpg" alt="Dogs">
-            <div class="container">
-                <h4><b>HERO AlERT</b></h4>
-                <p class="text-justify">Notifica a los usuarios de la plataforma que tu mascota esta extravida.</p>
+            <div class="card">
+                <img class="imagen-full" src="assets/Media/perrito2.jpg" alt="Dogs">
+                <div class="container">
+                    <h4><b>Adopcion</b></h4>
+                    <p class="text-justify">No compres adopta, en esta seccion podras conectar con las asociaciones y
+                        agendar una visita para conocer a tu peludo.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="imagen-full" src="assets/Media/perrito3.jpg" alt="Dogs">
+                <div class="container">
+                    <h4><b>HERO AlERT</b></h4>
+                    <p class="text-justify">Notifica a los usuarios de la plataforma que tu mascota esta extravida.</p>
+                </div>
             </div>
         </div>
     </div>
-    <!--Adicionales  -->
-    <div class="additional-wrapper">
-        <h1>Acerca de Nosotros</h1>
-        <p class="text-justify">
-            Aliquip occaecat enim reprehenderit exercitation id dolore et. In ex enim elit eu adipisicing anim
-            nostrud
-            occaecat nulla ullamco incididunt nostrud esse non. Id amet sint velit id reprehenderit veniam anim
-            officia
-            esse. Id nisi adipisicing ut reprehenderit enim aliqua reprehenderit sint deserunt laborum. Elit
-            consequat
-            duis nulla do anim. Non excepteur cillum eu pariatur velit exercitation culpa magna. Labore duis
-            adipisicing
-            amet veniam et enim nulla non.
+        <!--Adicionales  -->
+        <div class="additional-wrapper">
+            <h1>Acerca de Nosotros</h1>
+            <p class="text-justify">
+                Aliquip occaecat enim reprehenderit exercitation id dolore et. In ex enim elit eu adipisicing anim
+                nostrud
+                occaecat nulla ullamco incididunt nostrud esse non. Id amet sint velit id reprehenderit veniam anim
+                officia
+                esse. Id nisi adipisicing ut reprehenderit enim aliqua reprehenderit sint deserunt laborum. Elit
+                consequat
+                duis nulla do anim. Non excepteur cillum eu pariatur velit exercitation culpa magna. Labore duis
+                adipisicing
+                amet veniam et enim nulla non.
 
-            Dolor do exercitation ex officia laborum ut quis sit. Eiusmod aute incididunt voluptate consequat minim
-            esse
-            aliquip commodo sit irure.
-        </p>
-    </div>
-    <!-- Footer -->
-    <footer class="footer-wrapper">
-        <form>
-            <label for="msg">Mensaje:</label>
-            <textarea id="msg" name="user_message"></textarea>
-        </form>
-        <p class="footer-p">Contactanos en Nuestras Redes Sociales</p>
-        <div class="social-wrapper">
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/Facebook.png" alt="fb">
-            </a>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/Instagram.png" alt="ig">
-            </a>
-            <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/twitter.png" alt="tw">
-            </a>
-            <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt">
-            </a>
+                Dolor do exercitation ex officia laborum ut quis sit. Eiusmod aute incididunt voluptate consequat minim
+                esse
+                aliquip commodo sit irure.
+            </p>
         </div>
+        <!-- Footer -->
+        <footer class="footer-wrapper">
+            <form>
+                <label for="msg">Mensaje:</label>
+                <textarea id="msg" name="user_message"></textarea>
+            </form>
+            <p class="footer-p">Contactanos en Nuestras Redes Sociales</p>
+            <div class="social-wrapper">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Facebook.png" alt="fb">
+                </a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Instagram.png" alt="ig">
+                </a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/twitter.png" alt="tw">
+                </a>
+                <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt">
+                </a>
+            </div>
 
 
-    </footer>
+        </footer>
 </body>
 
 </html>
