diseñando el tipo de letra

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
             <div class="header-tittle">
                 <h1>Hero PET</h1>
             </div>
-
-            <div class="header-registro">
-                <p><a href="Registro.html">Crear Cuenta</a></p>
+          
+            <div class="novedades">
+                <p><a href="index.html">Novedades</a></p>
             </div>
-            <div class="header-input">
-                <p><a href="index.html">Login</a></p>
+
+            <div class="registro">
+                <p><a href="Registro.html">Registrate</a></p>
             </div>
         </header>
         <!--Jumbotron (Hero)  -->
@@ -41,8 +42,8 @@
         </div>
     </div>
     <!-- Mas informacion o blog -->
-    <div class="header-second">
-        <h1>Nuestros Servicios</h1>
+    <div class="servicios">
+        <p>Nuestros Servicios</p>
     </div>
     <div class="product-wrapper">
         <div class="card">
@@ -100,8 +101,11 @@
         </p>
     </div>
     <!-- Footer -->
+    <hr>
+    
     <footer class="footer-wrapper">
         <form>
+
             <label for="msg">Mensaje:</label>
             <textarea id="msg" name="user_message"></textarea>
         </form>
