--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header-tittle">
                 <h1>Hero PET</h1>
             </div>
-          
+
             <div class="novedades">
                 <p><a href="index.html">Novedades</a></p>
             </div>
@@ -35,34 +35,30 @@
     <div class="hero-wrapper">
         <div class="hero">
             <div class="hero-inner">
-                <h1>El Lugar de tu Perruno</h1>
-                <h2></h2>
-                <a class="btn">lleva toda la informacion de tu perruno siempre a la mano</a>
+                <h1>El Lugar de Tu Perruno</h1>
+                <p class="parra">Lleva toda la informacion de tu perruno siempre a la mano</p>
             </div>
         </div>
     </div>
     <!-- Mas informacion o blog -->
     <div class="servicios">
-        <p>Nuestros Servicios</p>
+        <p>Consiente a Tu Perruno</p>
     </div>
     <div class="product-wrapper">
         <div class="card">
             <img class="imagen-full" src="assets/Media/perrito0.jpg" alt="Dogs">
             <div class="container">
-                <h4><b>Expediente</b></h4>
-                <p class="text-justify"> Lleva el registro medico de tus mascotas a todas partes desde tu
-                    dispositivo
-                    movil,
-                    averigua como dando click aqui.</p>
+                <h4><b>Carnet de Mascota</b></h4>
+                <p class="text-justify">Lleva el registro medico de tus mascotas a
+                    todas partes desde tu dispositivo móvil, averigua como dando click aquí.</p>
             </div>
         </div>
         <div class="card">
             <img class="imagen-full" src="assets/Media/perrito1.jpg" alt="Dogs">
             <div class="container">
-                <h4><b>Cuidado para tus mascotas</b></h4>
-                <p class="text-justify"> Agenda cualquier servicio para tu mascosta, desde un baño y hasta la
-                    consulta
-                    del veterinario </p>
+                <h4>Cuida la Salud de Tu Mascota</h4>
+                <p class="text-justify"> Agenda el servicio para tu mascota dentro de la red de afiliados a Hero Pet,
+                    encontraras de todo Veterinarios, Especialistas, Baños, Guarderías... </p>
             </div>
         </div>
         <div class="card">
@@ -76,7 +72,7 @@
         <div class="card">
             <img class="imagen-full" src="assets/Media/perrito3.jpg" alt="Dogs">
             <div class="container">
-                <h4><b>HERO AlERT</b></h4>
+                <h4><b>HERO ALERT</b></h4>
                 <p class="text-justify">Notifica a los usuarios de la plataforma que tu mascota esta extravida.</p>
             </div>
         </div>
@@ -102,7 +98,7 @@
     </div>
     <!-- Footer -->
     <hr>
-    
+
     <footer class="footer-wrapper">
         <form>
 
