Ingresando Flex Conteiner
se agregan flex en la parte de adicionales

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </div>
         </header>
         <!--Jumbotron (Hero)  -->
+
     </div>
     <div class="hero-wrapper">
         <div class="hero">
@@ -40,61 +41,63 @@
             </div>
         </div>
     </div>
-    <!-- Mas informacion o blog -->
+    <!-- servicios  -->
     <div class="servicios">
         <p>Consiente a Tu Perruno</p>
     </div>
-    <div class="product-wrapper">
+    <div class="servicios-wrapper">
         <div class="card">
             <img class="imagen-full" src="assets/Media/perrito0.jpg" alt="Dogs">
             <div class="container">
                 <h4><b>Carnet de Mascota</b></h4>
+                <br>
                 <p class="text-justify">Lleva el registro medico de tus mascotas a
                     todas partes desde tu dispositivo móvil, averigua como dando click aquí.</p>
+                <br>
             </div>
         </div>
         <div class="card">
             <img class="imagen-full" src="assets/Media/perrito1.jpg" alt="Dogs">
             <div class="container">
                 <h4>Cuida la Salud de Tu Mascota</h4>
+                <br>
                 <p class="text-justify"> Agenda el servicio para tu mascota dentro de la red de afiliados a Hero Pet,
                     encontraras de todo Veterinarios, Especialistas, Baños, Guarderías... </p>
+                <br>
             </div>
         </div>
         <div class="card">
             <img class="imagen-full" src="assets/Media/perrito2.jpg" alt="Dogs">
             <div class="container">
-                <h4><b>Adopcion</b></h4>
+                <h4>Adopta a tu perruno</h4>
+                <br>
                 <p class="text-justify">No compres adopta, en esta seccion podras conectar con las asociaciones y
                     agendar una visita para conocer a tu peludo.</p>
+                <br>
             </div>
         </div>
         <div class="card">
             <img class="imagen-full" src="assets/Media/perrito3.jpg" alt="Dogs">
             <div class="container">
-                <h4><b>HERO ALERT</b></h4>
-                <p class="text-justify">Notifica a los usuarios de la plataforma que tu mascota esta extravida.</p>
+                <h4>Hero Alert</h4>
+                <br>
+                <p class="text-justify">Notifica de manera inmediata a los usuarios de
+                    la aplicación que se encuentren en un radio de 2 kilometros.</p>
+                <br>
             </div>
         </div>
     </div>
-    <!--Adicionales  -->
-    <div class="additional-wrapper">
-        <h1>Acerca de Nosotros</h1>
-        <p class="text-justify">
-            Aliquip occaecat enim reprehenderit exercitation id dolore et. In ex enim elit eu adipisicing anim
-            nostrud
-            occaecat nulla ullamco incididunt nostrud esse non. Id amet sint velit id reprehenderit veniam anim
-            officia
-            esse. Id nisi adipisicing ut reprehenderit enim aliqua reprehenderit sint deserunt laborum. Elit
-            consequat
-            duis nulla do anim. Non excepteur cillum eu pariatur velit exercitation culpa magna. Labore duis
-            adipisicing
-            amet veniam et enim nulla non.
 
-            Dolor do exercitation ex officia laborum ut quis sit. Eiusmod aute incididunt voluptate consequat minim
-            esse
-            aliquip commodo sit irure.
-        </p>
+    <!--Adicionales  -->
+    <div class="flex-container">
+        <div class="flex-adicionales1">
+            <h1>Acerca de Nosotros</h1>
+            <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+        </div>
+        <div class="flex-adicionales2">
+            <h2>ertuighrtiughrthghio</h2>
+            <p>lkngbkfgbfdgkhfgklhfklgjhbkdfg</p>
+        </div>
     </div>
     <!-- Footer -->
     <hr>
