Ajustes en adicionales
Se creo el tipo de letra y se agregaron adicionales derecho

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
         </div>
     </div>
 
+
+
+
+
+
+
     <!--Adicionales  -->
     <div class="flex-container">
         <div class="flex-adicionales1">
@@ -95,16 +101,26 @@
             <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
         </div>
         <div class="flex-adicionales2">
-            <h2>ertuighrtiughrthghio</h2>
-            <p>lkngbkfgbfdgkhfgklhfklgjhbkdfg</p>
+            <h2>NEWSLETTER</h2>
+            <p class="p2">Recibe todas nuestras novedades</p>
+            <p class="p3">¡Registra tu correo y comienza a disfrutarlas!</p>
+            <label for="email">b</label>
+            <input type="email" id="email" pattern=".+@globex\.com" size="30" required>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
     <!-- Footer -->
     <hr>
-
     <footer class="footer-wrapper">
         <form>
-
             <label for="msg">Mensaje:</label>
             <textarea id="msg" name="user_message"></textarea>
         </form>
