se agrego perrito para el blog

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
     <!--Adicionales  -->
     <div class="flex-container">
         <div class="flex-adicionales1">
+            <div class="card2">
+                <img class="imagen-full2" src="assets/Media/perritoblog.png" alt="Dogs">
             <h1>Acerca de Nosotros</h1>
             <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
         </div>
