--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="header-tittle">
-                <h1>Hero PET</h1>
+                <h1></h1>
             </div>
 
             <div class="novedades">
@@ -95,20 +95,23 @@
 
 
     <!--Adicionales  -->
-    <div class="flex-container">
-        <div class="flex-adicionales1">
-            <!-- <div class="card2">
-                <img class="imagen-full2" src="assets/Media/perritoblog.png" alt="Dogs"> -->
-            <h1>Acerca de Nosotros</h1>
-            <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-        </div>
-        <div class="flex-adicionales2">
-            <h2>NEWSLETTER</h2>
-            <p class="p2">Recibe todas nuestras novedades</p>
-            <p class="p3">¡Registra tu correo y comienza a disfrutarlas!</p>
-            <label for="email">b</label>
-            <input type="email" id="email" pattern=".+@globex\.com" size="30" required>
-        </div>
+    <div class="adicional-wrapper">
+        <!-- <div class="flex-container"> -->
+            <div class="adicionales1-wrapper">
+                <!-- <div class="card2"> -->
+                <!-- <img class="imagen-full2" src="assets/Media/perritoblog.png" alt="Dogs"> -->
+                <h1>Blog</h1>
+            </div>
+
+            <div class="adicionales2-wrapper">
+                <h2>NEWSLETTER</h2>
+                    <p class="p2">Recibe todas nuestras novedades</p>
+                    <p class="p3">¡Registra tu correo y comienza a disfrutarlas!</p>
+                <form for="email">
+                    <input type="email" placeholder="Tu mail aqui">
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>
     </div>
 
 
