Formato a logos redes
se realizo formato de tamaño y diseño a iconos de redes sociales

--- a/index.html
+++ b/index.html
@@ -125,25 +125,26 @@
     <!-- Footer -->
     <hr>
     <footer class="footer-wrapper">
-        <form>
-            <label for="msg">Mensaje:</label>
-            <textarea id="msg" name="user_message"></textarea>
-        </form>
         <p class="footer-p">Contactanos en Nuestras Redes Sociales</p>
-        <div class="social-wrapper">
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/Facebook.png" alt="fb">
-            </a>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/Instagram.png" alt="ig">
-            </a>
-            <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/twitter.png" alt="tw">
-            </a>
-            <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer">
-                <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt">
-            </a>
-        </div>
+            <div class="social-wrapper">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Facebook.png" alt="fb">
+                </a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Instagram.png" alt="ig">
+                </a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/twitter.png" alt="tw">
+                </a>
+                <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt">
+                </a>
+            </div>
+
+            <!-- <form>
+                <label for="msg">Mensaje:</label>
+                <textarea id="msg" name="user_message"></textarea>
+            </form> -->
 
 
     </footer>
