Se logro el footer
Footer

--- a/index.html
+++ b/index.html
@@ -97,23 +97,99 @@
     <!--Adicionales  -->
     <div class="adicional-wrapper">
         <!-- <div class="flex-container"> -->
-            <div class="adicionales1-wrapper">
-                <!-- <div class="card2"> -->
-                <!-- <img class="imagen-full2" src="assets/Media/perritoblog.png" alt="Dogs"> -->
-                <h1>Blog</h1>
-            </div>
+        <div class="adicionales1-wrapper">
+            <!-- <div class="card2"> -->
+            <!-- <img class="imagen-full2" src="assets/Media/perritoblog.png" alt="Dogs"> -->
+            <h1>Blog</h1>
+        </div>
 
-            <div class="adicionales2-wrapper">
-                <h2>NEWSLETTER</h2>
-                    <p class="p2">Recibe todas nuestras novedades</p>
-                    <p class="p3">¡Registra tu correo y comienza a disfrutarlas!</p>
-                <form for="email">
-                    <input type="email" placeholder="Tu mail aqui">
-                    <button type="submit">Enviar</button>
-                </form>
-            </div>
+        <div class="adicionales2-wrapper">
+            <h2>NEWSLETTER</h2>
+            <p class="p2">Recibe todas nuestras novedades</p>
+            <p class="p3">¡Registra tu correo y comienza a disfrutarlas!</p>
+            <form for="email">
+                <input type="email" placeholder="Correo Electronico">
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
     </div>
 
+    <div class="container"></div>
+
+
+    <!--Iniciando el Footer  -->
+    <footer>
+        <section class="ft-main">
+            <div class="ft-main-item">
+                <h2 class="ft-title">Conocenos</h2>
+                <ul>
+                    <li><a href="#">Quienes Somos</a></li>
+                    <li><a href="#">Informacion Corporativa</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </div>
+            <div class="ft-main-item">
+                <h2 class="ft-title">Ayudamos a tu negocio</h2>
+                <ul>
+                    <li><a href="#">Programa de afiliados</a></li>
+                    <li><a href="#">Registra tu fundacion</a></li>
+                </ul>
+            </div>
+            <div class="ft-main-item">
+                <h2 class="ft-title">Categorias</h2>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Registrate</a></li>
+                    <li><a href="#">Crear Expediente</a></li>
+                    <li><a href="#">Cuidado para tu mascota</a></li>
+                    <li><a href="#">Adopcion</a></li>
+                    <li><a href="#">Hero Alert</a></li>
+                </ul>
+            </div>
+            <div class="ft-main-item">
+                <h2 class="ft-title">NEWSLETTER</h2>
+                <p>Recibe todas nuestras novedades en correo</p>
+                <form>
+                    <input type="email" name="email" placeholder="Enter email address">
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </section>
+
+        <!-- Footer social -->
+        <section class="ft-social">
+            <ul class="ft-social-list">
+                <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                <img class="network-img" src="assets/Media/Facebook.png" alt="fb"></a>
+                </li>
+                <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Instagram.png" alt="ig"></a>
+                </li>
+                <li><a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt"></a>
+                </li>
+                <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="network-img" src="assets/Media/twitter.png" alt="tw"></a>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Footer legal -->
+        <section class="ft-legal">
+            <div class="logoimg-wrapper">
+                <a href="index.html" target="_blank" rel="noopener noreferrer">
+                    <img class="logo-img" src="assets/Media/Logo.png" alt="logof">
+                </a>
+            </div>
+            <ul class="ft-legal-list">
+                <li><a href="#">Condiciones &amp; Aviso de Privacidad</a></li>
+                <li>&copy; 2023 / Kaniltazo para Ucamp Proyecto 1</li>
+            </ul>
+        </section>
+    </footer>
+</body>
 
 
 
@@ -122,10 +198,35 @@
 
 
 
-    <!-- Footer -->
-    <hr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Footer -->
+<!--     
     <footer class="footer-wrapper">
-        <p class="footer-p">Contactanos en Nuestras Redes Sociales</p>
+        <hr>
+        <p class="pafooter-wrapper">Sigamos conectados.</p>
+        <div class="menu-footer-grid">
             <div class="social-wrapper">
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
                     <img class="network-img" src="assets/Media/Facebook.png" alt="fb">
@@ -140,14 +241,76 @@
                     <img class="network-img" src="assets/Media/Tik Tok.png" alt="tt">
                 </a>
             </div>
+            
+            <div class="menu-footer-nav-col1">
+                <h2 class="menu-footer-heading">Conocenos</h2>
+                <ul class="menu-footer-nav-list">
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">Quienes Somos</a>
+                    </li>
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">informacion Corporativa</a>
+                    </li>
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">Blog</a>
+                    </li>
+                </ul>
+                <div class="menu-footer-nav-col2">
+                    <h2 class="menu-footer-heading">Podemos ayudar a tu negocio</h2>
+                    <ul class="menu-footer-nav-list">
+                        <li class="menu-footer-nav-item">
+                            <a ref="index.html">Programa afiliados</a>
+                        </li>
+                        <li class="menu-footer-nav-item">
+                            <a ref="index.html">Registra tu fundación</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="menu-footer-nav-col3">
+                <h2 class="menu-footer-heading">Categorias</h2>
+                <ul class="menu-footer-nav-list">
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">Home</a>
+                    </li>
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">Iniciar Sesion</a>
+                    </li>
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">Resgistrate</a>
+                    </li>
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">Crear Expdiente</a>
+                    </li>
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">Cuidado para tu mascota</a>
+                    </li>
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">Adopcion</a>
+                    </li>
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">Hero Alert</a>
+                    </li>
+                    <li class="menu-footer-nav-item">
+                        <a ref="index.html">Blog</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-            <!-- <form>
+            <div class="logoimg-wrapper">
+                <a href="index.html" target="_blank" rel="noopener noreferrer">
+                    <img class="logo-img" src="assets/Media/Logo.png" alt="logof">
+                </a>
+                <div>
+                    <p class="condiciones-wrapper">Condiciones de Uso           Aviso de Privacidad</p>
+                </div>
+            </div>
+            <form>
                 <label for="msg">Mensaje:</label>
                 <textarea id="msg" name="user_message"></textarea>
             </form> -->
-
-
-    </footer>
+</footer>
 </body>
 
 </html>
