--- a/index.html
+++ b/index.html
@@ -90,27 +90,12 @@
 
 
 
-
-
-
-
     <!--Adicionales  -->
     <div class="adicional-wrapper">
         <!-- <div class="flex-container"> -->
         <div class="adicionales1-wrapper">
-            <!-- <div class="card2"> -->
-            <!-- <img class="imagen-full2" src="assets/Media/perritoblog.png" alt="Dogs"> -->
+            <img class="imagen-full2" src="assets/Media/perritoblog.png" alt="Dogs"> 
             <h1>Blog</h1>
-        </div>
-
-        <div class="adicionales2-wrapper">
-            <h2>NEWSLETTER</h2>
-            <p class="p2">Recibe todas nuestras novedades</p>
-            <p class="p3">¡Registra tu correo y comienza a disfrutarlas!</p>
-            <form for="email">
-                <input type="email" placeholder="Correo Electronico">
-                <button type="submit">Enviar</button>
-            </form>
         </div>
     </div>
 
